fixed spacing for navbar

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -343,7 +343,7 @@ hr.modal-divider { border: 0; border-top: 1px solid var(--bg-light-1); margin: 2
     background-color: var(--bg-dark-2);
     border-radius: 12px;
     padding: 15px 25px;
-    margin-bottom: 15px;
+    margin-bottom: -10px;
     border: 1px solid var(--bg-light-1);
     display: flex;
     align-items: flex-start;
